--- a/twVoiceCallRequestExecuteIot/db4free.env
+++ b/twVoiceCallRequestExecuteIot/db4free.env
@@ -1,10 +1,10 @@
-DB_USER = example_user
-DB_PASS = password
-DB_HOST = www.db4free.net
-DB_PORT = 3306
-DB_NAME = example_db
-DB_DRIVER = mysql
-T_SID = AC72c17e91f5f465c521bf3149ce9db284
-T_AUTH = ce284a1e27c3e110f5a916619e9ac97a
-T_NUMBER = +14159360262
-WEBHOOK_URL = https://09gjc5sacb.execute-api.us-west-2.amazonaws.com/default/twilio_webhook
+DB_USER = 
+DB_PASS = 
+DB_HOST = 
+DB_PORT = 
+DB_NAME = 
+DB_DRIVER = 
+T_SID = 
+T_AUTH = 
+T_NUMBER = 
+WEBHOOK_URL = 
